# hellorust

./: .gitignore  Cargo.toml  README.md  klave.json
apps/my-project/: Cargo.toml
apps/my-project/src/: lib.rs
apps/my-project/wit/: world.wit
